[package]
name = "leash-sdk"
version = "0.2.1"
edition = "2021"
description = "Rust SDK for the Leash platform integrations API"
license = "Apache-2.0"
repository = "https://github.com/leash-build/leash-sdk-rust"
keywords = ["leash", "integrations", "gmail", "calendar", "drive"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
